force-app/main/default/objects/UsersP__c/UsersP__c.object-meta.xml
<CustomObject>
    <label>UsersP</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>UserID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UsersP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>