force-app/main/default/objects/UsersP__c/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <inlineHelpText>Enter Email Address</inlineHelpText>
    <label>EmailAddress</label>
    <type>Email</type>
</CustomField>